--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=cnsservice
+spring.datasource.url= jdbc:postgresql://localhost:5432/cnsserviceappdb
+spring.datasource.username= postgres
+spring.datasource.password= 123456
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
+
+# Graphql
+graphql.servlet.mapping: /apis/graphql
